metadata image modifications

--- a/NVL-HTML-P5a.html
+++ b/NVL-HTML-P5a.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p> En el siguiente ejercicio, nos piden insertar una imagen </p>
-    <img src="./imagenes/scrum_framework.png" alt="Ciclo Comprehensive Scrum Guide"
+    <img src="./imagenes/scrum_framework.png" width="200" height="200" alt="A 50x50 image, Ciclo Comprehensive Scrum Guide"
    </body>
 </html> 
 
